--- a/.gitignore
+++ b/.gitignore
@@ -5,13 +5,13 @@ build/
 !**/src/test/**/build/
 
 ### IntelliJ IDEA ###
-.idea/modules.xml
-.idea/jarRepositories.xml
-.idea/compiler.xml
-.idea/libraries/
-.idea/gradle.xml
-.idea/vcs.xml
-.idea/misc.xml
+/.idea/modules.xml
+/.idea/jarRepositories.xml
+/.idea/compiler.xml
+/.idea/libraries/
+/.idea/gradle.xml
+/.idea/misc.xml
+/.idea/GitCommitMessageStorage.xml
 *.iws
 *.iml
 *.ipr
@@ -43,3 +43,4 @@ bin/
 
 ### Mac OS ###
 .DS_Store
+
